@@ -4,16 +4,20 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertSame;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.fail;
 
 import java.time.Instant;
 import java.util.Date;
 import java.util.List;
+import org.broadinstitute.consent.http.enumeration.AuditActions;
 import org.broadinstitute.consent.http.enumeration.UserRoles;
 import org.broadinstitute.consent.http.models.DataAccessAgreement;
 import org.broadinstitute.consent.http.models.Institution;
 import org.broadinstitute.consent.http.models.LibraryCard;
+import org.broadinstitute.consent.http.models.LibraryCardDaaAudit;
+import org.broadinstitute.consent.http.models.LibraryCardDaaDetail;
 import org.broadinstitute.consent.http.models.User;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -117,13 +121,15 @@ class LibraryCardDAOTest extends DAOTestHelper {
     // 3. DAA so we can link it to a user's Library Card
     // 4. Library Card <-> DAA relationship that represents a Signing Official's acceptance of a DAA
     // for the user
+    User signingOfficial = createUser();
     LibraryCard card = createLibraryCard();
     int dacId = dacDAO.createDac(randomAlphabetic(10), randomAlphabetic(10), new Date());
     int daaId =
         daaDAO.createDaa(
             card.getCreateUserId(), Instant.now(), card.getCreateUserId(), Instant.now(), dacId);
     daaDAO.createDacDaaRelation(dacId, daaId, card.getUserId());
-    libraryCardDAO.createLibraryCardDaaRelation(card.getId(), daaId);
+    libraryCardDAO.createLibraryCardDaaRelation(
+        card.getUserId(), signingOfficial.getUserId(), card.getId(), daaId);
 
     libraryCardDAO.deleteLibraryCardById(card.getId());
     assertNull(libraryCardDAO.findLibraryCardById(card.getId()));
@@ -149,21 +155,22 @@ class LibraryCardDAOTest extends DAOTestHelper {
 
   @Test
   void testFindLibraryCardDaaByIdMultipleDaas() {
+    User signingOfficial = createUser();
     LibraryCard card = createLibraryCard();
     Integer userId = createUser().getUserId();
     Integer dacId = dacDAO.createDac(randomAlphabetic(5), randomAlphabetic(5), "", new Date());
-    Integer daaId1 =
-        daaDAO.createDaa(userId, new Date().toInstant(), userId, new Date().toInstant(), dacId);
-    Integer daaId2 =
-        daaDAO.createDaa(userId, new Date().toInstant(), userId, new Date().toInstant(), dacId);
+    Integer daaId1 = daaDAO.createDaa(userId, Instant.now(), userId, Instant.now(), dacId);
+    Integer daaId2 = daaDAO.createDaa(userId, Instant.now(), userId, Instant.now(), dacId);
     DataAccessAgreement daa1 = daaDAO.findById(daaId1);
     DataAccessAgreement daa2 = daaDAO.findById(daaId2);
     card.addDaa(daa1.getDaaId());
     card.addDaa(daa2.getDaaId());
     card.addDaaObject(daa1);
     card.addDaaObject(daa2);
-    libraryCardDAO.createLibraryCardDaaRelation(card.getId(), daaId1);
-    libraryCardDAO.createLibraryCardDaaRelation(card.getId(), daaId2);
+    libraryCardDAO.createLibraryCardDaaRelation(
+        card.getUserId(), signingOfficial.getUserId(), card.getId(), daaId1);
+    libraryCardDAO.createLibraryCardDaaRelation(
+        card.getUserId(), signingOfficial.getUserId(), card.getId(), daaId2);
     Integer id = card.getId();
     LibraryCard cardFromDAO = libraryCardDAO.findLibraryCardDaaById(id);
 
@@ -174,7 +181,7 @@ class LibraryCardDAOTest extends DAOTestHelper {
     assertEquals(cardFromDAO.getCreateDate(), card.getCreateDate());
     assertEquals(cardFromDAO.getDaaIds(), card.getDaaIds());
 
-    DataAccessAgreement daaFromDAO1 = cardFromDAO.getDaas().get(0);
+    DataAccessAgreement daaFromDAO1 = cardFromDAO.getDaas().getFirst();
     assertEquals(daaFromDAO1.getDaaId(), daa1.getDaaId());
     assertEquals(daaFromDAO1.getCreateUserId(), daa1.getCreateUserId());
     assertEquals(daaFromDAO1.getCreateDate(), daa1.getCreateDate());
@@ -225,19 +232,21 @@ class LibraryCardDAOTest extends DAOTestHelper {
 
     assertNotNull(cardsFromDAO);
     assertEquals(1, cardsFromDAO.size());
-    assertEquals(cardsFromDAO.get(0).getId(), lcId);
-    assertTrue(cardsFromDAO.get(0).getDaaIds().isEmpty());
+    assertEquals(cardsFromDAO.getFirst().getId(), lcId);
+    assertTrue(cardsFromDAO.getFirst().getDaaIds().isEmpty());
   }
 
   @Test
   void testFindLibraryCardByUserIdInstitutionId() {
+    User signingOfficial = createUser();
     LibraryCard libraryCard = createLibraryCard();
     int dacId =
         dacDAO.createDac(randomAlphabetic(5), randomAlphabetic(5), randomAlphabetic(5), new Date());
     Instant now = Instant.now();
     int daaId = daaDAO.createDaa(libraryCard.getUserId(), now, libraryCard.getUserId(), now, dacId);
     daaDAO.createDacDaaRelation(dacId, daaId, libraryCard.getUserId());
-    libraryCardDAO.createLibraryCardDaaRelation(libraryCard.getId(), daaId);
+    libraryCardDAO.createLibraryCardDaaRelation(
+        libraryCard.getUserId(), signingOfficial.getUserId(), libraryCard.getId(), daaId);
     LibraryCard cardFromDAO = libraryCardDAO.findLibraryCardByUserId(libraryCard.getUserId());
     assertNotNull(cardFromDAO);
     assertEquals(cardFromDAO, libraryCard);
@@ -250,7 +259,7 @@ class LibraryCardDAOTest extends DAOTestHelper {
     createLibraryCardForIndex();
     List<LibraryCard> cardListUpdated = libraryCardDAO.findAllLibraryCards();
     assertEquals(1, cardListUpdated.size());
-    LibraryCard card = cardListUpdated.get(0);
+    LibraryCard card = cardListUpdated.getFirst();
     assertTrue(card.getDaaIds().isEmpty());
   }
 
@@ -282,6 +291,7 @@ class LibraryCardDAOTest extends DAOTestHelper {
 
   @Test
   void testCreateLibraryCardDaaAssociation() {
+    User signingOfficial = createUser();
     User user = createUser();
     User user2 = createUser();
     LibraryCard card = createLibraryCard(user);
@@ -289,13 +299,14 @@ class LibraryCardDAOTest extends DAOTestHelper {
     Integer userId = user.getUserId();
     Integer dacId = dacDAO.createDac(randomAlphabetic(5), randomAlphabetic(5), "", new Date());
     Integer dacId2 = dacDAO.createDac(randomAlphabetic(5), randomAlphabetic(5), "", new Date());
-    Integer daaId1 =
-        daaDAO.createDaa(userId, new Date().toInstant(), userId, new Date().toInstant(), dacId);
-    Integer daaId2 =
-        daaDAO.createDaa(userId, new Date().toInstant(), userId, new Date().toInstant(), dacId2);
-    libraryCardDAO.createLibraryCardDaaRelation(card.getId(), daaId1);
-    libraryCardDAO.createLibraryCardDaaRelation(card.getId(), daaId2);
-    libraryCardDAO.createLibraryCardDaaRelation(card2.getId(), daaId1);
+    Integer daaId1 = daaDAO.createDaa(userId, Instant.now(), userId, Instant.now(), dacId);
+    Integer daaId2 = daaDAO.createDaa(userId, Instant.now(), userId, Instant.now(), dacId2);
+    libraryCardDAO.createLibraryCardDaaRelation(
+        card.getUserId(), signingOfficial.getUserId(), card.getId(), daaId1);
+    libraryCardDAO.createLibraryCardDaaRelation(
+        card.getUserId(), signingOfficial.getUserId(), card.getId(), daaId2);
+    libraryCardDAO.createLibraryCardDaaRelation(
+        card2.getUserId(), signingOfficial.getUserId(), card2.getId(), daaId1);
 
     List<LibraryCard> lcs = libraryCardDAO.findAllLibraryCards();
     LibraryCard lc1 = lcs.get(0);
@@ -304,65 +315,221 @@ class LibraryCardDAOTest extends DAOTestHelper {
     assertEquals(2, lc1.getDaaIds().size());
     assertNotNull(lc2.getDaaIds());
     assertEquals(1, lc2.getDaaIds().size());
+
+    // Verify daaDetails are populated with authorizedBy from the audit table
+    assertNotNull(lc1.getDaaDetails());
+    assertEquals(2, lc1.getDaaDetails().size());
+    for (LibraryCardDaaDetail detail : lc1.getDaaDetails()) {
+      assertNotNull(detail.daaId());
+      assertEquals(signingOfficial.getEmail(), detail.authorizedBy());
+    }
+    assertNotNull(lc2.getDaaDetails());
+    assertEquals(1, lc2.getDaaDetails().size());
+    assertEquals(signingOfficial.getEmail(), lc2.getDaaDetails().getFirst().authorizedBy());
   }
 
   @Test
   void testCreateLibraryCardDaaAssociationInvalid() {
+    User signingOfficial = createUser();
     User user = createUser();
     LibraryCard card = createLibraryCard(user);
     Integer userId = user.getUserId();
     Integer dacId = dacDAO.createDac(randomAlphabetic(5), randomAlphabetic(5), "", new Date());
-    Integer daaId1 =
-        daaDAO.createDaa(userId, new Date().toInstant(), userId, new Date().toInstant(), dacId);
+    Integer daaId1 = daaDAO.createDaa(userId, Instant.now(), userId, Instant.now(), dacId);
 
     try {
-      libraryCardDAO.createLibraryCardDaaRelation(card.getId(), 2);
+      libraryCardDAO.createLibraryCardDaaRelation(
+          card.getUserId(), signingOfficial.getUserId(), card.getId(), 2);
     } catch (Exception e) {
       assertEquals(
           PSQLState.FOREIGN_KEY_VIOLATION.getState(), ((PSQLException) e.getCause()).getSQLState());
     }
 
     try {
-      libraryCardDAO.createLibraryCardDaaRelation(2, daaId1);
+      libraryCardDAO.createLibraryCardDaaRelation(
+          card.getUserId(), signingOfficial.getUserId(), 2, daaId1);
     } catch (Exception e) {
       assertEquals(
           PSQLState.FOREIGN_KEY_VIOLATION.getState(), ((PSQLException) e.getCause()).getSQLState());
     }
 
     List<LibraryCard> lcs = libraryCardDAO.findAllLibraryCards();
-    LibraryCard lc1 = lcs.get(0);
+    LibraryCard lc1 = lcs.getFirst();
     assertTrue(lc1.getDaaIds().isEmpty());
   }
 
   @Test
   void testDeleteLibraryCardDaaAssociation() {
+    User signingOfficial = createUser();
     User user = createUser();
     User user2 = createUser();
     LibraryCard card = createLibraryCard(user);
-    LibraryCard card2 = createLibraryCard(user2);
+    createLibraryCard(user2);
     Integer userId = user.getUserId();
     Integer dacId = dacDAO.createDac(randomAlphabetic(5), randomAlphabetic(5), "", new Date());
     Integer dacId2 = dacDAO.createDac(randomAlphabetic(5), randomAlphabetic(5), "", new Date());
-    Integer daaId1 =
-        daaDAO.createDaa(userId, new Date().toInstant(), userId, new Date().toInstant(), dacId);
-    Integer daaId2 =
-        daaDAO.createDaa(userId, new Date().toInstant(), userId, new Date().toInstant(), dacId2);
-    libraryCardDAO.createLibraryCardDaaRelation(card.getId(), daaId1);
-    libraryCardDAO.createLibraryCardDaaRelation(card.getId(), daaId2);
+    Integer daaId1 = daaDAO.createDaa(userId, Instant.now(), userId, Instant.now(), dacId);
+    Integer daaId2 = daaDAO.createDaa(userId, Instant.now(), userId, Instant.now(), dacId2);
+    libraryCardDAO.createLibraryCardDaaRelation(
+        card.getUserId(), signingOfficial.getUserId(), card.getId(), daaId1);
+    libraryCardDAO.createLibraryCardDaaRelation(
+        card.getUserId(), signingOfficial.getUserId(), card.getId(), daaId2);
 
     List<LibraryCard> lcs = libraryCardDAO.findAllLibraryCards();
-    LibraryCard lc1 = lcs.get(0);
+    LibraryCard lc1 = lcs.getFirst();
     assertEquals(2, lc1.getDaaIds().size());
+    assertEquals(2, lc1.getDaaDetails().size());
 
-    libraryCardDAO.deleteLibraryCardDaaRelation(card.getId(), daaId1);
+    libraryCardDAO.deleteLibraryCardDaaRelation(
+        card.getUserId(), signingOfficial.getUserId(), card.getId(), daaId1);
     lcs = libraryCardDAO.findAllLibraryCards();
-    lc1 = lcs.get(0);
+    lc1 = lcs.getFirst();
     assertEquals(1, lc1.getDaaIds().size());
+    assertEquals(1, lc1.getDaaDetails().size());
 
-    libraryCardDAO.deleteLibraryCardDaaRelation(card.getId(), daaId2);
+    libraryCardDAO.deleteLibraryCardDaaRelation(
+        card.getUserId(), signingOfficial.getUserId(), card.getId(), daaId2);
     lcs = libraryCardDAO.findAllLibraryCards();
-    lc1 = lcs.get(0);
+    lc1 = lcs.getFirst();
     assertTrue(lc1.getDaaIds().isEmpty());
+    assertTrue(lc1.getDaaDetails() == null || lc1.getDaaDetails().isEmpty());
+  }
+
+  @Test
+  void testFindAuditsByLibraryCardUserId() {
+    // Create a user, signing official, and library card
+    User user = createUser();
+    User signingOfficial = createUser();
+    Integer lcId =
+        libraryCardDAO.insertLibraryCard(
+            user.getUserId(),
+            user.getDisplayName(),
+            user.getEmail(),
+            signingOfficial.getUserId(),
+            new Date());
+
+    // SO associates user to access agreement 1
+    User chairperson1 = createUser();
+    Integer dacId1 =
+        dacDAO.createDac(
+            randomAlphabetic(5), randomAlphabetic(5), chairperson1.getEmail(), new Date());
+    Integer daaId1 =
+        daaDAO.createDaa(
+            chairperson1.getUserId(),
+            Instant.now(),
+            chairperson1.getUserId(),
+            Instant.now(),
+            dacId1);
+    libraryCardDAO.createLibraryCardDaaRelation(
+        user.getUserId(), signingOfficial.getUserId(), lcId, daaId1);
+
+    // SO associates user to access agreement 2
+    User chairperson2 = createUser();
+    Integer dacId2 =
+        dacDAO.createDac(
+            randomAlphabetic(5), randomAlphabetic(5), chairperson2.getEmail(), new Date());
+    Integer daaId2 =
+        daaDAO.createDaa(
+            chairperson1.getUserId(),
+            Instant.now(),
+            chairperson2.getUserId(),
+            Instant.now(),
+            dacId2);
+    libraryCardDAO.createLibraryCardDaaRelation(
+        user.getUserId(), signingOfficial.getUserId(), lcId, daaId2);
+
+    List<LibraryCardDaaAudit> audits = libraryCardDAO.findAuditsByLcUserId(user.getUserId());
+    assertFalse(audits.isEmpty());
+    assertEquals(2, audits.size());
+    assertTrue(
+        audits.stream()
+            .map(LibraryCardDaaAudit::action)
+            .allMatch(action -> action == AuditActions.ADD));
+
+    // Dissociate user from DAA 1 and check that we have a REMOVE audit.
+    libraryCardDAO.deleteLibraryCardDaaRelation(
+        user.getUserId(), signingOfficial.getUserId(), lcId, daaId1);
+    List<LibraryCardDaaAudit> audits2 = libraryCardDAO.findAuditsByLcUserId(user.getUserId());
+    assertFalse(audits2.isEmpty());
+    assertEquals(3, audits2.size());
+    assertTrue(audits2.stream().anyMatch(audit -> audit.action() == AuditActions.REMOVE));
+  }
+
+  @Test
+  void testEnsureAuditInsertsSkippedOnConflict_Add() {
+    // Create a user, signing official, and library card
+    User user = createUser();
+    User signingOfficial = createUser();
+    Integer lcId =
+        libraryCardDAO.insertLibraryCard(
+            user.getUserId(),
+            user.getDisplayName(),
+            user.getEmail(),
+            signingOfficial.getUserId(),
+            new Date());
+
+    // SO associates user to data access agreement
+    User chairperson = createUser();
+    Integer dacId =
+        dacDAO.createDac(
+            randomAlphabetic(5), randomAlphabetic(5), chairperson.getEmail(), new Date());
+    Integer daaId =
+        daaDAO.createDaa(
+            chairperson.getUserId(), Instant.now(), chairperson.getUserId(), Instant.now(), dacId);
+    libraryCardDAO.createLibraryCardDaaRelation(
+        user.getUserId(), signingOfficial.getUserId(), lcId, daaId);
+
+    // Repeat the same association which should trigger the ON CONFLICT in the SQL and ensure that
+    // we do not insert a duplicate audit record.
+    libraryCardDAO.createLibraryCardDaaRelation(
+        user.getUserId(), signingOfficial.getUserId(), lcId, daaId);
+
+    List<LibraryCardDaaAudit> audits = libraryCardDAO.findAuditsByLcUserId(user.getUserId());
+    assertFalse(audits.isEmpty());
+    assertEquals(1, audits.size());
+    assertSame(AuditActions.ADD, audits.getFirst().action());
+  }
+
+  @Test
+  void testEnsureAuditInsertsSkippedOnConflict_Remove() {
+    // Create a user, signing official, and library card
+    User user = createUser();
+    User signingOfficial = createUser();
+    Integer lcId =
+        libraryCardDAO.insertLibraryCard(
+            user.getUserId(),
+            user.getDisplayName(),
+            user.getEmail(),
+            signingOfficial.getUserId(),
+            new Date());
+
+    // SO associates user to data access agreement
+    User chairperson = createUser();
+    Integer dacId =
+        dacDAO.createDac(
+            randomAlphabetic(5), randomAlphabetic(5), chairperson.getEmail(), new Date());
+    Integer daaId =
+        daaDAO.createDaa(
+            chairperson.getUserId(), Instant.now(), chairperson.getUserId(), Instant.now(), dacId);
+    libraryCardDAO.createLibraryCardDaaRelation(
+        user.getUserId(), signingOfficial.getUserId(), lcId, daaId);
+
+    // SO Removes association
+    libraryCardDAO.deleteLibraryCardDaaRelation(
+        user.getUserId(), signingOfficial.getUserId(), lcId, daaId);
+
+    // Repeat the same delection which should trigger the ON CONFLICT in the SQL and ensure that
+    // we do not insert a duplicate audit record.
+    libraryCardDAO.deleteLibraryCardDaaRelation(
+        user.getUserId(), signingOfficial.getUserId(), lcId, daaId);
+
+    List<LibraryCardDaaAudit> audits =
+        libraryCardDAO.findAuditsByLcUserId(user.getUserId()).stream()
+            .filter(audit -> audit.action() == AuditActions.REMOVE)
+            .toList();
+    assertFalse(audits.isEmpty());
+    assertEquals(1, audits.size());
+    assertSame(AuditActions.REMOVE, audits.getFirst().action());
   }
 
   @Test
@@ -463,12 +630,10 @@ class LibraryCardDAOTest extends DAOTestHelper {
     assertFalse(cardsFromDAO.contains(card4));
   }
 
-  private LibraryCard createLibraryCardForIndex() {
+  private void createLibraryCardForIndex() {
     Integer userId = createUser().getUserId();
     String stringValue = "value";
-    Integer id =
-        libraryCardDAO.insertLibraryCard(userId, stringValue, stringValue, userId, new Date());
-    return libraryCardDAO.findLibraryCardById(id);
+    libraryCardDAO.insertLibraryCard(userId, stringValue, stringValue, userId, new Date());
   }
 
   private Institution createInstitution() {
